added relevant information as per the div contents

--- a/index.html
+++ b/index.html
@@ -31,18 +31,7 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
+
 
 
 
@@ -101,36 +90,38 @@ h1 {
 
 <div class="container">
   <img src="KCPE-2018-MOMBASA.JPG" alt="Snow" style="width:100%;">
-  <div class="centered"><h1><font color="blue">PORTFOLIO</font></h1><hr></div>
+  <div class="centered"><h1><font color="blue">BRAD</font></h1><hr></div>
 </div>
+
+
 
 <div class="row">
   <div class="column">
     <div class="content">
       <img src="KCPE-2018-MOMBASA.JPG" alt="Mountains" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      <h3>Database Management Systems</h3>
+      <p>I create good school management systems capable of both tescher and student intercation</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
     <img src="KCPE-2018-MOMBASA.JPG" alt="Lights" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      <h3>Graphical User Interface</h3>
+      <p>I create breath taking graphical user interface for clients</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
     <img src="KCPE-2018-MOMBASA.JPG" alt="Nature" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      <h3>User Experience</h3>
+      <p>Get a world class user experience</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
     <img src="KCPE-2018-MOMBASA.JPG" alt="Mountains" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      <h3>consumer Data Analytics</h3>
+      <p>I am also capable of using data to help fullfill the public needs</p>
     </div>
   </div>
 <!-- END GRID -->
