--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@ h1 {
 
 <div class="container">
   <img src="KCPE-2018-MOMBASA.JPG" alt="Snow" style="width:100%;">
-  <div class="centered"><h1><button class="button button3">BRAD</button></font></h1><hr></div>
+  <div class="centered"><h1><font color="blue">BRAD</font></h1><hr></div>
 </div>
-
 
 
 <div class="row">
