added relevant images

--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@ h1 {
 <body>
 <!-- MAIN (Center website) -->
 <div class="main">
+  
 
 
 
 
 <div class="container">
-  <img src="KCPE-2018-MOMBASA.JPG" alt="Snow" style="width:100%;">
+  <img src="africatech.GIF" alt="Snow" style="width:100%;">
   <div class="centered"><h1><font color="blue">BRAD</font></h1><hr></div>
 </div>
 
@@ -97,28 +98,28 @@ h1 {
 <div class="row">
   <div class="column">
     <div class="content">
-      <img src="KCPE-2018-MOMBASA.JPG" alt="Mountains" style="width:100%">
-      <h3>Database Management Systems</h3>
+      <img src="database-blue.PNG" alt="Mountains" style="width:100%">
+      <h3>Database Management</h3>
       <p>I create good school management systems capable of both tescher and student intercation</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
-    <img src="KCPE-2018-MOMBASA.JPG" alt="Lights" style="width:100%">
+    <img src="shutterstock_160918730.JPG" alt="Lights" style="width:100%">
       <h3>Graphical User Interface</h3>
       <p>I create breath taking graphical user interface for clients</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
-    <img src="KCPE-2018-MOMBASA.JPG" alt="Nature" style="width:100%">
+    <img src="968750_196b_6.JPG" alt="Nature" style="width:100%">
       <h3>User Experience</h3>
       <p>Get a world class user experience</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
-    <img src="KCPE-2018-MOMBASA.JPG" alt="Mountains" style="width:100%">
+    <img src="1_Ra02AqsQlC0KV229EvM98g.JPG" alt="Mountains" style="width:100%">
       <h3>consumer Data Analytics</h3>
       <p>I am also capable of using data to help fullfill the public needs</p>
     </div>
