added padding to the body plus the background color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
 	<style>
 		* {
-			bos
+			box-sizing: border-box;
+
+		}
+		body {
+			background-color: white;
+			padding: 20px;
 		}
 	</style>
 	<title>bradley</title>
