added padding to the rows

--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
 			background-color: white;
 			padding: 20px;
 		}
+		.main{
+			max-width: 1300px;
+			margin: auto;
+		}
+		.row {
+           margin: 8px -16px;
+}
+
+	.row,
+.row > .column {
+  padding: 8px;
+}
+
+}
+
+
 	</style>
 	<title>bradley</title>
 </head>
