--- a/test.html
+++ b/test.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+<style>
+	* {
+		box-sizing: border-box;
+	}
+	body {
+		background-color: white;
+		padding:20px;
+	}
+	
+</style>
 <head>
 	<title></title>
 </head>
