--- a/test.html
+++ b/test.html
@@ -29,6 +29,11 @@
 		background-color: white;
 		padding: 10px;
 	}
+	@media screen and (max-width: 900px) {
+		.column{
+			width: 50%;
+		}
+	}
 
 
 
