added the header image and the navbar

--- a/test.html
+++ b/test.html
@@ -48,6 +48,18 @@
 	<title></title>
 </head>
 <body>
+	<div class="header">
+  <div class="content">
+		<img src="shutterstock_160918730.JPG" alt="image" style="width:100%">
+
+</div>
+</div>
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#contact">Contact Me</a></li>
+  <li><a href="#about">About Me</a></li>
+</ul>
+
 	<div class="main">
 		<div class="row">
 			<div class="column">
@@ -80,10 +92,7 @@
 
 
 	</div>
-	<div class="content">
-		<img src="shutterstock_160918730.JPG" alt="image" style="width:100%">
-
-</div>
+	
 </div>
 
 
