added the about me section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@ a {
   padding: 14px 16px;
   text-decoration: none;
 }
-
+span{
+	display: block;
+	color: Red;
+	text-align: center;
+}
 	@media screen and (max-width: 900px) {
 		.column{
 			width: 50%;
@@ -137,9 +141,22 @@ a {
 				
 			</div>
 		</div>
+		<div class="content">
+			<b>
+			<span><h1>About Me</h1></span>
+			<p align="center">
+			<br>
+			My name is Bradley Waka.I have always been in love with technology and always wanted to know how things work not just websites and 
+		</br>
+			applications but electronics too.I have been teaching myself to code for the last four months.the reason for joining motinga school is 
+<br>
+			to one day help some one somewhere to achieve a goal not just marketing but in other fields of technology and to inspire.After all we owe it to each other to help.
+		</p>
+		</div>
+		</div>
 				
 
-
+</b>
 
 	</div>
 
