--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ span{
 			<div class="column">
 				<div class="content">
 					<a href="">
-					<img src="shutterstock_160918730.JPG" alt="image" style="width:100%">
+					<img src="preview-xl.JPG" alt="image" style="width:100%">
 					<em class="details"><b>School Management System</b><hr></em>
 					<p>With inclusion of css grids and media query,the site is able to allow students to navigate thruogh their school details like performance,fee deficitnd upcoming school events  </p>
 </a>
@@ -115,7 +115,7 @@ span{
 					<div class="column">
 				<div class="content">
 					<a href="">
-					<img src="shutterstock_160918730.JPG" alt="image" style="width:100%">
+					<img src="responsive-design-ecommerce-site-graphic.JPG" alt="image" style="width:100%">
 					<em class="details"><b>E-Commerce Site</b><hr></em>
 					<p>Beneath the breath taking user interface lies bootstrap instructions combined with php and sql allowing customers to login any time into the system and make on-line orders</p>
 				</a>
@@ -124,7 +124,7 @@ span{
 					<div class="column">
 				<div class="content">
 					<a href="">
-					<img src="shutterstock_160918730.JPG" alt="image" style="width:100%">
+					<img src="blog.JPG" alt="image" style="width:100%">
 					<em class="details"><b>Blog Site</b><hr></em>
 					<p>Great user interface,user experience design captivates and captivating titles attracts traffic to your blog site.It's detailed with python flusk socket io for live messaging with mongo db. </p>
 				</a>
@@ -134,7 +134,7 @@ span{
 					<div class="column">
 				<div class="content">
 					<a href="">
-					<img src="shutterstock_160918730.JPG" alt="image" style="width:100%">
+					<img src="StudioBinder-Projects-Production-Film-and-TV-Management-Software.PNG" alt="image" style="width:100%">
 					<em class="details"><b>Movie Vendor Site</b><hr></em>
 					<p>Reach the highest number of movie clients via this site's flowless trailer videos for advertisement.Powered by python django,the site presents remarkable performance on both powerful and low spec gadgets. </p>
 				</a>
